; ModuleID = '/home/carl/AnghaBench/streem/src/extr_time.c_parse_tz.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_time.c_parse_tz.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TZ_FAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @parse_tz to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_tz(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8, align 1
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %11 = load i8*, i8** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8, i8* %11, i64 %13
  store i8* %14, i8** %9, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = getelementptr inbounds i8, i8* %15, i64 0
  %17 = load i8, i8* %16, align 1
  %18 = sext i8 %17 to i32
  switch i32 %18, label %73 [
    i32 90, label %19
    i32 43, label %20
    i32 45, label %20
  ]

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %75

20:                                               ; preds = %2, %2
  %21 = load i8*, i8** %4, align 8
  %22 = getelementptr inbounds i8, i8* %21, i32 1
  store i8* %22, i8** %4, align 8
  %23 = load i8, i8* %21, align 1
  store i8 %23, i8* %8, align 1
  %24 = load i8*, i8** %9, align 8
  %25 = call i32 @scan_num(i8** %4, i8* %24)
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %6, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %20
  %29 = load i32, i32* @TZ_FAIL, align 4
  store i32 %29, i32* %3, align 4
  br label %75

30:                                               ; preds = %20
  %31 = load i8*, i8** %4, align 8
  %32 = load i8, i8* %31, align 1
  %33 = sext i8 %32 to i32
  %34 = icmp eq i32 %33, 58
  br i1 %34, label %35, label %40

35:                                               ; preds = %30
  %36 = load i8*, i8** %4, align 8
  %37 = getelementptr inbounds i8, i8* %36, i32 1
  store i8* %37, i8** %4, align 8
  %38 = load i8*, i8** %9, align 8
  %39 = call i32 @scan_num(i8** %4, i8* %38)
  store i32 %39, i32* %7, align 4
  br label %51

40:                                               ; preds = %30
  %41 = load i32, i32* %6, align 4
  %42 = icmp sge i32 %41, 100
  br i1 %42, label %43, label %49

43:                                               ; preds = %40
  %44 = load i32, i32* %6, align 4
  store i32 %44, i32* %10, align 4
  %45 = load i32, i32* %10, align 4
  %46 = sdiv i32 %45, 100
  store i32 %46, i32* %6, align 4
  %47 = load i32, i32* %10, align 4
  %48 = srem i32 %47, 100
  store i32 %48, i32* %7, align 4
  br label %50

49:                                               ; preds = %40
  store i32 0, i32* %7, align 4
  br label %50

50:                                               ; preds = %49, %43
  br label %51

51:                                               ; preds = %50, %35
  %52 = load i32, i32* %6, align 4
  %53 = icmp sgt i32 %52, 14
  br i1 %53, label %54, label %56

54:                                               ; preds = %51
  %55 = load i32, i32* @TZ_FAIL, align 4
  store i32 %55, i32* %3, align 4
  br label %75

56:                                               ; preds = %51
  %57 = load i32, i32* %7, align 4
  %58 = icmp sgt i32 %57, 59
  br i1 %58, label %59, label %61

59:                                               ; preds = %56
  %60 = load i32, i32* @TZ_FAIL, align 4
  store i32 %60, i32* %3, align 4
  br label %75

61:                                               ; preds = %56
  %62 = load i32, i32* %6, align 4
  %63 = mul nsw i32 %62, 60
  %64 = load i32, i32* %7, align 4
  %65 = add nsw i32 %63, %64
  %66 = load i8, i8* %8, align 1
  %67 = sext i8 %66 to i32
  %68 = icmp eq i32 %67, 45
  %69 = zext i1 %68 to i64
  %70 = select i1 %68, i32 -1, i32 1
  %71 = mul nsw i32 %65, %70
  %72 = mul nsw i32 %71, 60
  store i32 %72, i32* %3, align 4
  br label %75

73:                                               ; preds = %2
  %74 = load i32, i32* @TZ_FAIL, align 4
  store i32 %74, i32* %3, align 4
  br label %75

75:                                               ; preds = %73, %61, %59, %54, %28, %19
  %76 = load i32, i32* %3, align 4
  ret i32 %76
}

declare dso_local i32 @scan_num(i8**, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
